modules/gdscript/tests/scripts/analyzer/errors/variable_name_shadows_builtin_type.gd
var Vector2

func test():
	pass
